css/styling.css
/** {*/
    /*-webkit-box-sizing: border-box;*/
    /*-moz-box-sizing: border-box;*/
    /*box-sizing: border-box;*/
/*}*/

.rgba-primary-0 { color: rgba(255, 24,  0,1) }	/* Main Primary color */
.rgba-primary-1 { color: rgba(255,114, 99,1) }
.rgba-primary-2 { color: rgba(255, 76, 57,1) }
.rgba-primary-3 { color: rgba(197, 19,  0,1) }
.rgba-primary-4 { color: rgba(155, 15,  0,1) }

.rgba-secondary-1-0 { color: rgba(255,124,  0,1) }	/* Main Secondary color (1) */
.rgba-secondary-1-1 { color: rgba(255,175, 99,1) }
.rgba-secondary-1-2 { color: rgba(255,154, 57,1) }
.rgba-secondary-1-3 { color: rgba(197, 96,  0,1) }
.rgba-secondary-1-4 { color: rgba(155, 76,  0,1) }

.rgba-secondary-2-0 { color: rgba(  4,133,157,1) }	/* Main Secondary color (2) */
.rgba-secondary-2-1 { color: rgba( 73,164,182,1) }
.rgba-secondary-2-2 { color: rgba( 39,143,163,1) }
.rgba-secondary-2-3 { color: rgba(  3,103,121,1) }
.rgba-secondary-2-4 { color: rgba(  2, 81, 95,1) }

.rgba-complement-0 { color: rgba(  0,193, 43,1) }	/* Main Complement color */
.rgba-complement-1 { color: rgba( 81,208,109,1) }
.rgba-complement-2 { color: rgba( 44,196, 78,1) }
.rgba-complement-3 { color: rgba(  0,149, 33,1) }
.rgba-complement-4 { color: rgba(  0,117, 26,1) }

.article-img1 { background: url(../imgs/brushe.jpg); background-size: cover; }
/*.article-img2 { background: url(../imgs/brushe.jpg); background-size: cover; }*/
/*.article-img3 { background: url(../imgs/brushe.jpg); background-size: cover; }*/
/*.article-img4 { background: url(../imgs/brushe.jpg); background-size: cover; }*/

body {
    /*background*/
    /*background: seashell url(../imgs/red_pattern3.png);*/
    background: #fff;

    /*font*/
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 14px;
    color: #333;

    /*size*/
    /*min-height: 2000px;*/

    /*layout*/
    padding-top: 70px;
    margin: 0;
    display: block;
}

a {
    /*font*/
    color: #337ab7;
    text-decoration: none;
}

a:hover,
a:focus {
    /*font*/
    color: #23527c;
    text-decoration: none;
}

ul {
    /*layout*/
    margin: 0;
}

@media (min-width: 768px) {
    .container {
        width: 750px;
    }
}

@media (min-width: 992px) {
    .container {
        width: 970px;
    }
}
@media (min-width: 1200px) {
    .container {
        width: 1170px;
    }
}

.container {
    /*layout*/
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container:after,
.container:before {
    display: table;
    content: " ";
}

.container:after {
    clear: both;
}

nav {
    /*background*/
    /*background-color: #222222;*/
    background-color: rgba(255, 255, 255, 1.0);

    /*layout*/
    margin: 0;
    /*The element is positioned relative to the browser page*/
    position: fixed;
    display: block;

    /*heigth*/
    top: 0;
    height: 50px;

    /*width*/
    right: 0;
    left: 0;
    z-index: 1000;
}

.navbar-header {
    /*layout*/
    float: left;
}

.navbar-brand-logo {
    /*layout*/
    float: left;
    padding: 5px 5px 2px;
}

.navbar-brand {
    /*font*/
    color: #777;
    font-size: 18px;
    text-decoration: none;

    /*layout*/
    padding: 15px 15px;
    line-height: 20px;
    float: left;

    /*effects*/
    transition: all .25s ease;
}

.navbar-header > a:hover,
.navbar-header > a:focus {
    /*font*/
    text-decoration: none;
    color: #999;
}

.navbar-right {
    /*styles*/
    list-style: none outside;

    /*layout*/
    margin: 0;
    padding-left: 0;
    float: right;
    display: block;
}

.navbar-right > li {
    /*layout*/
    float: left;
    display: block; /*?*/
    position: relative; /*?*/

    /*styles*/
    list-style-type: none;
}

.navbar-right > li > a {
    /*font*/
    color: #888;

    /*effects*/
    transition: all .25s ease;

    /*layout*/
    position: relative;
    display: block;
    padding: 15px 15px;
    line-height: 20px;
}

.navbar-right > li > a:hover,
.navbar-right > li > a:focus {
    /*font*/
    text-decoration: none;
    color: #000;

    /*background*/
    background-color: rgba(255, 255, 255, 0.8);
}

.navbar > li:hover > ul,
.navbar > li:focus > ul{
    /*layout*/
    display: block;
}

.navbar-dropdown {
    /*layout*/
    display: none;
    padding: 0;
    /*min-width: 160px;*/
}

.navbar-dropdown > li {
    /*background*/
    background-color: rgba(255, 255, 255, 0.8);

    /*layout*/
    float: none;
    display: block;
    position: relative;

    /*styles*/
    list-style-type: none;
}

.navbar-dropdown > li > a {
    /*font*/
    color: #888;

    /*effects*/
    transition: all .25s ease;

    /*layout*/
    position: relative;
    display: block;
    padding: 15px 15px;
    line-height: 20px;
}

.navbar-dropdown > li > a:hover {
    /*font*/
    text-decoration: none;
    color: #000;

    /*background*/
    background-color: rgba(255, 255, 255, 0.8);
}

#header-main {
    /*background*/
    background: rgba(155, 15,  0,1) url(../imgs/header_bg.png);

    /*layout*/
    padding: 48px;
    display: block;
    margin-bottom: 50px;
    min-height: 400px;

    /*font*/
    text-align: center;
    /*vertical-align:middle;*/
}

/*.vertical-center {*/
    /*display: table;*/
/*}*/

/*.t {*/
    /*display: table-cell;*/
    /*vertical-align: middle;*/
/*}*/

/*/!*not beeing used*!/*/
/*.vertical-center {*/
    /*display: table-cell;*/
    /*text-align: center;*/
    /*vertical-align: middle;*/
/*}*/

h1 {
    /*font*/
    font-size: 50px;
    color: #fff;

    /*layout*/
    /*position: relative;*/
    display: block;
    margin: 0 0 20px;
    line-height: 50px;
    z-index: 100;
}

h2 {
    /*font*/
    font-size: 18px;
    color: #eee;

    /*layout*/
    /*position: relative;*/
    display: block;
    margin-bottom: 20px;
    line-height: 18px;
    z-index: 100;
}

.arrow-down {
    /*layout*/
    margin-top: 20px;

    /*effects*/
    transition: all .25s ease;
    opacity: 0.5;
    filter: alpha(opacity=40); /* For IE8 and earlier */
}

.arrow-down:hover,
.arrow-down:focus {
    /*effects*/
    opacity: 0.8;
    filter: alpha(opacity=40); /* For IE8 and earlier */
}

.articles {
    margin-bottom: 30px;
}

article {
    /*background*/
    background: rgba(155, 15,  0,1) url(../imgs/header_bg.png);
    /*background-size: cover;*/

    /*layout*/
    padding: 24px 30px;
    display: block;
    margin: 0 75px 50px;
    height: 350px;
    position: relative;
}

article > p {
    margin: 0;
    position: absolute;
    bottom:0;
    left:0;
    padding: 25px 40px;
    background: rgba(0, 0, 0, 0.8);
    color: #999;
    text-align: justify;
    /*-webkit-border-radius: 10px;*/
    /*-moz-border-radius: 10px;*/
    /*border-radius: 10px;*/
    /*border: 1px #333333 solid;*/
    /*font-size: 18px;*/
    line-height: 25px;
    max-height: 60px;
    overflow: hidden;
    /*margin: 260px 0 0;*/
}

/*article > p:before {*/
    /*content: '...';*/
    /*text-align: right;*/
    /*position: absolute;*/
    /*display: block;*/
    /*width: 2em;*/
    /*height: 1em;*/
    /*bottom: 1em;*/
    /*right: 20px;*/
/*}*/

article > p:after {
    /*content: '...';*/
    /*padding: inherit;*/
    position: absolute;
    display: block;
    width: 100%;
    height: 2em;
    bottom: 0;
    left: 0;
    background: #E0E0E0;
}

.anchor{
    display: block;
    height: 70px; /*same height as header*/
    margin-top: -70px; /*same height as header*/
    visibility: hidden;
}

/*header:after, header:before {*/
    /*display: table;*/
    /*content: " ";*/
/*}*/

/*header:after {*/
    /*clear: both;*/
/*}*/

/*nav:after, nav:before {*/
    /*display: table;*/
    /*content: " ";*/
/*}*/

/*nav:after {*/
    /*clear: both;*/
/*}*/

